--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div id="entries"></div>
   </div>
 
+  <!-- JavaScript-Datei am Ende des Body -->
   <script src="script.js"></script>
 </body>
 </html>
