--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
     </form>
     <p id="error" style="color: red; display: none;">Falsches Passwort!</p>
   </div>
-
+  
+  <!-- Neues Reise-Formular -->
+  <div class="form-group" style="margin-top: 20px;">
+    <h3>🆕 Neue Reise erstellen</h3>
+    <input type="text" id="neueReiseName" placeholder="Name der Reise (z. B. Alpen-Route 2026)" />
+    <input type="date" id="neueReiseStart" placeholder="Startdatum" />
+    <input type="date" id="neueReiseEnde" placeholder="Enddatum" />
+    <button id="neueReiseButton">Reise speichern</button>
+  </div>
+    
   <div class="container" id="mainScreen" style="display: none;">
     <h1>📝 Abenteuer-Logbuch</h1>
     <p>Teile deine Erlebnisse mit der Familie – jederzeit, überall.</p>
