--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <p id="error" style="color: red; display: none;">Falsches Passwort!</p>
   </div>
   
-   <!-- Neues Reise-Formular -->
-  <div class="form-group" style="margin-top: 20px;">
+  <!-- Neues Reise-Formular (nur sichtbar nach Login) -->
+  <div class="form-group" style="margin-top: 20px; display: none;" id="neueReiseForm">
     <h3>🆕 Neue Reise erstellen</h3>
     <input type="text" id="neueReiseName" placeholder="Name der Reise (z. B. Alpen-Route 2026)" />
     <input type="date" id="neueReiseStart" placeholder="Startdatum" />
