--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     <div id="reiseInfo">
       <p>Keine Reise ausgewählt.</p>
     </div>
-
+    
+    <div class="form-group">
+      <label for="title">Titel:</label>
+      <input type="text" id="title" placeholder="z. B. 'Heute war ein toller Tag am See'" required />
+    </div>
+    
     <!-- Berichte -->
     <h2>📅 Letzte Einträge</h2>
     <div id="entries"></div>
