--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   </div>
 
   <div class="container" id="mainScreen" style="display: none;">
-    <h1>📝 Abenteuer-Logbuch</h1>
-    <p>Teile deine Erlebnisse mit der Familie – jederzeit, überall.</p>
+    <!-- Button: Neue Reise -->
+    <div class="new-reise-button">
+      <button id="neueReiseButton">➕ Neue Reise hinzufügen</button>
+    </div>
 
     <!-- Reise-Auswahl (Dropdown) -->
     <div class="form-group">
