--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </div>
 
   <div class="container" id="mainScreen" style="display: none;">
-    <!-- Button: Neue Reise -->
-    <div class="new-reise-button">
+    <!-- Button: Neue Reise (nur sichtbar nach Login) -->
+    <div class="new-reise-button" id="neueReiseButtonContainer" style="display: none;">
       <button id="neueReiseButton">➕ Neue Reise hinzufügen</button>
     </div>
-
+    
     <!-- Reise-Auswahl (Dropdown) -->
     <div class="form-group">
       <label for="reise">Aktuelle Reise:</label>
