--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <div class="container" id="mainScreen" style="display: none;">
     <!-- Button: Neue Reise (nur sichtbar nach Login) -->
-    <div class="new-reise-button" id="neueReiseButtonContainer" style="display: none;">
-      <button id="neueReiseButton">➕ Neue Reise hinzufügen</button>
-    </div>
+  <div class="new-reise-button" id="neueReiseButtonContainer">
+    <button id="neueReiseButton">➕ Neue Reise hinzufügen</button>
+  </div>
     
     <!-- Reise-Auswahl (Dropdown) -->
     <div class="form-group">
